syntax = "proto3";
package account;
option go_package = "github.com/DubrovEva/backend/higher_search/pkg/proto/api";

import "model/user.proto";

service Account {
  rpc GetUser (user.UserID) returns (GetUserResponse);
  rpc InsertUser (user.UserInfo) returns (InsertUserResponse);
  rpc UpdateUser (user.User) returns (UpdateUserResponse);
}

message GetUserResponse {
  oneof response {
    Error err = 1;
    user.UserInfo user_info = 2;
  }
}

message InsertUserResponse {
  oneof response {
    Error err = 1;
    user.UserID user_id = 2;
  }
}

message UpdateUserResponse {
  oneof response {
    Error err = 1;
    user.User user = 2;
  }
}

message Error {
  string msg = 1;
}
